# TAFPython

./: README.md  conftest.py  env.py  playwright.config.ts  pyproject.toml
client/: http_client.py
models/: datasets.py  login.py
services/: dataset_service.py
tests/: test_one.py
